working frontend translate

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1422,7 +1422,7 @@ a {
   bottom: -23px;
   width: 230px;
   height: 180px;
-  background-image: url("../img/phone.png");
+  background-image: url("../img/telefon.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: contain;
